
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int x; int y; } ;
typedef TYPE_1__ RPanelPos ;



void __set_pos(RPanelPos *pos, int x, int y) {
 pos->x = x;
 pos->y = y;
}
